force-app/main/default/objects/Skill_Will__c/Skill_Will__c.object-meta.xml
<CustomObject>
    <label>( Deprecated ) Skill Will</label>
    <nameField>
        <displayFormat>SW-{000000}</displayFormat>
        <label>Skill/Will Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>( Deprecated ) Skill Will</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>