force-app/main/default/objects/Skill_Will__c/fields/Account_Skill__c.field-meta.xml
<CustomField>
    <fullName>Account_Skill__c</fullName>
    <label>Account Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Will</valueSetName>
    </valueSet>
</CustomField>