force-app/main/default/objects/Skill_Will__c/fields/Command_of_the_Message_Skill__c.field-meta.xml
<CustomField>
    <fullName>Command_of_the_Message_Skill__c</fullName>
    <label>Command of the Message Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Will</valueSetName>
    </valueSet>
</CustomField>