force-app/main/default/objects/Skill_Will__c/fields/Execute_Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Execute_Skill_Score__c</fullName>
    <formula>(VALUE(TEXT(   Pipeline_Generation_Execute_Skill__c )) + VALUE(TEXT(  Sales_Process_Skill__c  )) + VALUE(TEXT( People_Management_Skill__c))) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execute Skill Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>