force-app/main/default/objects/Skill_Will__c/fields/Execute_Will_Score__c.field-meta.xml
<CustomField>
    <fullName>Execute_Will_Score__c</fullName>
    <formula>(VALUE(TEXT(   Pipeline_Generation_Execute_Will__c )) + VALUE(TEXT(  Sales_Process_Will__c  )) + VALUE(TEXT( People_Management_Will__c))) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execute Will Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>