force-app/main/default/objects/Skill_Will__c/fields/Overall_Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Skill_Score__c</fullName>
    <formula>(Plan_Skill_Score__c +  Prepare_Skill_Score__c +  Execute_Skill_Score__c )/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Skill Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>