force-app/main/default/objects/Skill_Will__c/fields/Pipeline_Generation_Execute_Skill__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Generation_Execute_Skill__c</fullName>
    <label>Pipeline Generation Execute Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Will</valueSetName>
    </valueSet>
</CustomField>