force-app/main/default/objects/Skill_Will__c/fields/Pipeline_Generation_Execute_Will__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Generation_Execute_Will__c</fullName>
    <label>Pipeline Generation Execute Will</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Will</valueSetName>
    </valueSet>
</CustomField>