force-app/main/default/objects/Skill_Will__c/fields/Plan_Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Plan_Skill_Score__c</fullName>
    <formula>(VALUE(TEXT(Account_Skill__c)) + VALUE(TEXT( Territory_Skill__c)) + VALUE(TEXT(Pipeline_Generation_Plan_Skill__c)) + VALUE(TEXT(People_EB_Champion_Skill__c ))) / If(VALUE(TEXT(People_EB_Champion_Skill__c )) &gt; 0,4,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Skill Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>