force-app/main/default/objects/Skill_Will__c/fields/Plan_Will_Score__c.field-meta.xml
<CustomField>
    <fullName>Plan_Will_Score__c</fullName>
    <formula>(VALUE(TEXT(Account_Will__c)) + VALUE(TEXT( Territory_Will__c)) + VALUE(TEXT(Pipeline_Generation_Plan_Will__c)) + VALUE(TEXT(People_EB_Champion_Will__c ))) / If(VALUE(TEXT(People_EB_Champion_Will__c )) &gt; 0,4,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Will Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>