force-app/main/default/objects/Skill_Will__c/fields/Prepare_Will_Score__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Will_Score__c</fullName>
    <formula>(VALUE(TEXT( Meeting_Excellence_Will__c )) + VALUE(TEXT(  Domain_Knowledge_Will__c )) + VALUE(TEXT( Command_of_the_Message_Will__c ))) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepare Will Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>