force-app/main/default/objects/Skill_Will__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Skill_Will</relationshipName>
    <type>Lookup</type>
</CustomField>