force-app/main/default/objects/Skill_Will__c/fields/Skip_Level_Pulse_Check__c.field-meta.xml
<CustomField>
    <fullName>Skip_Level_Pulse_Check__c</fullName>
    <label>Skip Level Pulse Check</label>
    <referenceTo>Skip_Level_Pulse_Check__c</referenceTo>
    <relationshipName>Skill_Will</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>