force-app/main/default/objects/Skill_Will__c/fields/Territory_Will__c.field-meta.xml
<CustomField>
    <fullName>Territory_Will__c</fullName>
    <label>Territory Will</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Low</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Below Average</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Average</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Above Average</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>