force-app/main/default/objects/Skill_Will__c/validationRules/People_EB_Champion_Skill_Will_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>People_EB_Champion_Skill_Will_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR(TEXT(People_EB_Champion_Skill__c) == &apos;0&apos;, TEXT(People_EB_Champion_Will__c) == &apos;0&apos;) , TEXT(People_EB_Champion_Skill__c) != TEXT(People_EB_Champion_Will__c), false)</errorConditionFormula>
    <errorMessage>You cannot select different values for People (EB / Champion)  Skill and Will if either one value is 0 - Not applicable.</errorMessage>
</ValidationRule>